--- a/styles.css
+++ b/styles.css
@@ -123,7 +123,11 @@ body {
 }
 
 .rodape {
+    background-color: #f1f1f1;
+    color: #333;
     text-align: center;
+    font-size: 14px;
+    padding: 20px;
     margin: 5em 3em;
 }
 
